[package]
name = "esp32c3_embedded-tls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes-gcm = { version = "0.10.1", default-features = false, features = ["aes"] }
digest = { version = "0.10.3", default-features = false, features = ["core-api"] }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-tls = { version = "0.17.0" }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4"] }
embassy-time = "0.3.1"
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-println = "0.3.0"
esp-wifi = { version = "0.7.1", optional = true } 
log = "0.4"
rand = "0.8"
rand_core = "0.6"
static_cell = "2.1.0"
portable-atomic = { version = "1.7", default-features = false, features = ["require-cas"] }
