[package]
name = "esp32c3_embedded-tls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# aes-gcm = { version = "0.10.1", default-features = false, features = ["aes"] }
# digest = { version = "0.10.3", default-features = false, features = ["core-api"] }
embedded-io = {version = "0.6" }
embedded-io-async = "0.6"
embedded-tls = { version = "0.17.0", default-features = false }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4"] }
embassy-time = "0.3.1"
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-println = { version = "0.10.0", features = ["auto"] }
esp-wifi = { version = "0.7.1", optional = true, features = ["wifi"] }
log = "0.4"
# rand = "0.8"
# rand_core = "0.6"
static_cell = "2.1.0"
portable-atomic = { version = "1.7", default-features = false }
esp-backtrace = { version = "0.13.0", default-features = false, features = ["exception-handler", "panic-handler", "println"] }
esp-hal-embassy = { version = "0.2.0", optional = true }
esp-storage = { version = "0.3.0", optional = true }
esp-hal-smartled = { version = "0.12.0", optional = true }
esp-ieee802154 = { version = "0.1.0", optional = true }

[features]
default = ["esp32c3"]
# esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy?/esp32", "esp-println/esp32", "esp-storage?/esp32", "esp-wifi?/esp32", "esp-hal-smartled/esp32"]
# esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-hal-smartled/esp32c3", "esp-wifi?/esp32c3", "dep:esp-wifi", "dep:esp-hal-embassy"]
# esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-hal-smartled/esp32c6", "esp-ieee802154/esp32c6"]
# esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-hal-smartled/esp32h2", "esp-ieee802154/esp32h2"]
# esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy?/esp32s2", "esp-println/esp32", "esp-storage?/esp32s2", "esp-wifi?/esp32s2", "esp-hal-smartled/esp32s2"]
# esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy?/esp32s3", "esp-println/esp32", "esp-storage?/esp32s3", "esp-wifi?/esp32s3", "esp-hal-smartled/esp32s3"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
lto = "fat"
overflow-checks = false
